name:                hsmd
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/instinctive/hsmd#readme
license:             BSD3
license-file:        LICENSE
author:              Charles Martin
maintainer:          charles.martin@gmail.com
copyright:           Copyright: (c) 2017 Charles Martin
category:            development
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable hsmd
  hs-source-dirs:      src
  main-is:             Main.lhs
  default-language:    Haskell2010
  ghc-options:         -pgmL markdown-unlit
  build-depends:       base >= 4.7 && < 5
