cabal-version:       1.10
name:                hsmd
version:             0.1.0.0
homepage:            https://github.com/instinctive/hsmd#readme
build-type:          Simple

executable hsmd
  hs-source-dirs:      src
  main-is:             Main.lhs
  default-language:    Haskell2010
  ghc-options:         -pgmL markdown-unlit
  build-depends:       base >= 4.7 && < 5
